<resources>
    <string name="app_name">NewLogIn</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="enter_your_mail_id">Enter Your mail ID</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
</resources>